--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+@layer base {
+  h1 span,
+  h2 span,
+  h3 span,
+  h4 span{
+    @apply underline;
+		@apply underline-offset-4;
+		@apply decoration-weart-500;
+  }
+  /* ... */
+}
